Wed Sep 11 18:19:15 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_23_Test.cpp:
          Use std namespace

Wed Sep 11 07:50:50 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/MEM_Addr.h:
        * ace/MEM_Connector.cpp:
        * ace/OS_NS_Thread.cpp:
        * ace/README:
        * ace/Service_Config.cpp:
        * ace/config-android.h:
        * ace/config-hpux-11.00.h:
        * ace/config-kfreebsd.h:
        * ace/config-linux.h:
        * ace/config-macosx.h:
        * ace/config-netbsd.h:
        * ace/config-qnx.h:
        * ace/config-vxworks6.4.h:
        * bin/PerlACE/ProcessAndroid.pm:
        * bin/PerlACE/TestTarget_Android.pm:
        * tests/Bug_3912_Regression_Test.cpp:
        * tests/Compiler_Features_21_Test.cpp:
        * tests/MEM_Stream_Test.cpp:
        * tests/Malloc_Test.cpp:
        * tests/Process_Mutex_Test.cpp:
        * tests/Process_Test.cpp:
        * tests/Service_Config_Test.cpp:
        * tests/test_config.h:
          Improvements for the Android port

          commit 496976474caeddb893be839386f204f46e5965d7
          Author: Johnny Willemsen <jwillemsen@remedy.nl>
          Date:   Tue Sep 10 10:02:38 2013 +0200

                    Comment out ACE_HAS_POSIX_SEM, have to test this further
                  * ACE/ace/config-android.h:

          commit 5a8318253f6f8647b4db2842a3503481e043e2fb
          Author: Johnny Willemsen <jwillemsen@remedy.nl>
          Date:   Mon Sep 9 20:55:12 2013 +0200

                    Layout changes
                  * ACE/ace/README:

          commit cb35f2c6d6e59614ecfaf60ccd996c68d90d0d56
          Author: Johnny Willemsen <jwillemsen@remedy.nl>
          Date:   Mon Sep 9 15:17:44 2013 +0200

                    Use quotes around filenames in order to support spaces
                    as part of filename
                  * ACE/bin/PerlACE/ProcessAndroid.pm:
                  * ACE/bin/PerlACE/TestTarget_Android.pm:
